--- a/app/views/index.scala.html
+++ b/app/views/index.scala.html
@@ -1,9 +1,13 @@
-@(users: List[User])
+@import security.model.UserProfile
+@import play.api.Play.current
 
-@main("Listing users") {
+@(userProfile: UserProfile)
+@config= @{play.Play.application().configuration() }
+
+@main("Horsley Parish") {
 	<div class="container">
-	    <h1>users: @users.length </h1>
-	    <a href="@routes.UsersController.add" class="btn btn-primary">Add User</a>
+	    <h1>Title here</h1>
+
 	    <table class="table table-striped">
 		    <thead>
 		    	<tr>
@@ -14,16 +18,7 @@
 		    	</tr>
 		    </thead>
 			<tbody>
-				@for(user <- users) {
-				<tr>
-					<td>@user.id</td>
-					<td>@user.name</td>
-						@user.id.map { id =>
-							<td><a href="@routes.UsersController.edit(id)" class="btn btn-warning" type="submit">Edit</button></td>
-							<td>@helper.form(routes.UsersController.delete(id)){<button class="btn btn-danger" type="submit">Delete</button>}</li></td>
-						}
-				</tr>
-				}
+
 			</tbody>
 		</table>
 	</div>
