--- a/app/views/index.scala.html
+++ b/app/views/index.scala.html
@@ -4,7 +4,26 @@
 @(userProfile: UserProfile)
 @config= @{play.Play.application().configuration() }
 
-@main("Horsley Parish") {
+<!DOCTYPE html>
+	<head>
+		<title>Horsley Parish, Gloucestershire, Community website</title>
+		<meta http-equiv="Content-type" content="text/html; charset=utf-8"/>
+		<meta name="viewport" content="width=device-width, initial-scala=1"/>
+
+		<link rel="stylesheet" href="@routes.Assets.at("stylesheets/font-awesome-4.6.3/css/font-awesome.css")"/>
+		<link rel="stylesheet" href="@routes.Assets.at("stylesheets/bootstrap-3.3.7/bootstrap.min.css")"/>
+		<link rel="stylesheet" href="@routes.Assets.at("stylesheets/OpenSans.css")"/>
+		<link rel="stylesheet" href="@routes.Assets.at("stylesheets/horsleyparish.css")"/>
+
+		<script type="text/javascript" src="@routes.Assets.at("javascripts/libs/bootstrap/bootstrap.min.js")"></script>
+		<script type="text/javascript" src="@routes.Assets.at("javascripts/libs/bootstrap/ui-bootstrap-tpls-2.1.4.min.js")"></script>
+		<script type="text/javascript" src="@routes.Assets.at("javascripts/libs/angular-1.5.8/angular.min.js")"></script>
+		<script type="text/javascript" src="@routes.Assets.at("javascripts/libs/angular-1.5.8/angular-resource.min.js")"></script>
+		<script type="text/javascript" src="@routes.Assets.at("javascripts/libs/angular-1.5.8/angular-route.min.js")"></script>
+
+	</head>
+
+
 	<div class="container">
 	    <h1>Title here</h1>
 
@@ -22,4 +41,4 @@
 			</tbody>
 		</table>
 	</div>
-}
+
