--- a/app/views/index.scala.html
+++ b/app/views/index.scala.html
@@ -23,22 +23,24 @@
 
 	</head>
 
+	<body ng-app="horsleyParish">
+		<div class="container">
+			<div ng-include="/public/pages/common/page-header.html"></div>
+			<h1>Title here</h1>
 
-	<div class="container">
-	    <h1>Title here</h1>
+			<table class="table table-striped">
+				<thead>
+					<tr>
+						<th>ID</th>
+						<th>Name</th>
+						<th>Edit</th>
+						<th>Delete</th>
+					</tr>
+				</thead>
+				<tbody>
 
-	    <table class="table table-striped">
-		    <thead>
-		    	<tr>
-		    		<th>ID</th>
-					<th>Name</th>
-					<th>Edit</th>
-					<th>Delete</th>
-		    	</tr>
-		    </thead>
-			<tbody>
-
-			</tbody>
-		</table>
-	</div>
+				</tbody>
+			</table>
+		</div>
+	</body>
 
