--- a/app/views/notFoundPage.scala.html
+++ b/app/views/notFoundPage.scala.html
@@ -14,7 +14,7 @@
       <link rel='stylesheet' href='@routes.WebJarAssets.at(webJarAssets.locate("css/bootstrap-theme.css"))'>
       <link rel="stylesheet" href="@routes.Assets.at("stylesheets/font-awesome-4.6.3/css/font-awesome.css")"/>
       <link rel="stylesheet" href="@routes.Assets.at("stylesheets/OpenSans.css")"/>
-      <link rel="stylesheet" href="@routes.Assets.at("stylesheets/horsleyparish.css")"/>
+      <link rel="stylesheet" href="@routes.Assets.at("public/stylesheets/main.css")"/>
 
     </head>
 
