More work on page layout and directives

--- a/app/views/index.scala.html
+++ b/app/views/index.scala.html
@@ -28,7 +28,7 @@
 		<script type="text/javascript" src='@routes.Assets.at("javascripts/app.js")'></script>
 
 		<!-- Common -->
-		<link rel="stylesheet" href="@routes.Assets.at("features/common/header-parallax.css")"/>
+		<link rel="stylesheet" href="@routes.Assets.at("features/common/common.css")"/>
 
 		<!-- Features -->
 
