--- a/public/features/section-navigation/section-navigation-button.css
+++ b/public/features/section-navigation/section-navigation-button.css
@@ -3,6 +3,28 @@
     overflow: hidden;
     box-shadow: rgba(0,0,0,0.117647) 0px 1px 6px, rgba(0,0,0,0.117647) 0px 1px 4px;
     border-radius: 15px;
-    width: 100px;
-    height:100px;
+    width: 160px;
+    margin: 6px 6px 6px 6px;
+}
+.sec-nav-btn .primary-title {
+    height: 24px;
+    width:  100%;
+    display: inline-block;
+    vertical-align: middle;
+}
+.sec-nav-btn .primary-title p {
+    vertical-align: middle;
+}
+.sec-nav-btn .primary-body {
+    width: 100%;
+    height: 70px;
+    display: block;
+    background-position: center;
+    background-repeat: no-repeat;
+}
+.sec-nav-btn .text-content {
+    width: 100%;
+    text-align: left;
+    font-size: 10px;
+    padding: 4px 4px 4px 4px;
 }
