--- a/public/features/section-navigation/section-navigation-button.css
+++ b/public/features/section-navigation/section-navigation-button.css
@@ -3,13 +3,28 @@
     overflow: hidden;
     box-shadow: rgba(0,0,0,0.117647) 0px 1px 6px, rgba(0,0,0,0.117647) 0px 1px 4px;
     border-radius: 15px;
-    margin: 4pc 4px 4px 4px;
-    width: 150px;
+    margin: 4px 4px 4px 4px;
+    width: 160px;
+}
+.sec-nav-btn .primary-title {
+    min-height: 15px;
+    width: 100%;
+    display: inline-block;
+    vertical-align: middle;
+}
+.sec-nav-btn .primary-title p {
+    vertical-align: middle;
 }
 .sec-nav-btn .primary-body {
     background-repeat: no-repeat;
     background-position: top center;
     display: block;
-    min-width: 50px;
+    width: 100%;
     min-height: 70px;
+}
+.sec-nav-btn .text-content {
+    width: 100%;
+    text-align: center;
+    font-size: 14px;
+    padding: 4px 4px 4px 4px;
 }
