--- a/app/views/index.scala.html
+++ b/app/views/index.scala.html
@@ -18,7 +18,7 @@
 		<link rel="stylesheet" href="@routes.Assets.at("stylesheets/main.css")"/>
 
 		<script type="text/javascript" src='@routes.WebJarAssets.at(webJarAssets.locate("jquery.js"))'></script>
-		<script type="text/javascript" src='@routes.WebJarAssets.at(webJarAssets.locate("bootstrap.js"))'></script>
+		<script type="text/javascript" src='@routes.WebJarAssets.at(webJarAssets.locate("bootstrap.min.js"))'></script>
 		<script type="text/javascript" src='@routes.WebJarAssets.at(webJarAssets.locate("angular.js"))'></script>
 		<script type="text/javascript" src='@routes.WebJarAssets.at(webJarAssets.locate("angular-resource.js"))'></script>
 		<script type="text/javascript" src='@routes.WebJarAssets.at(webJarAssets.locate("1.5.8/angular-route.js"))'></script>
@@ -63,20 +63,17 @@
 		<div id="page-wrapper">
 			<div class="parallax">
 				<div class="hdr-para-container">
-
 					<div ng-include="'/web/features/common/header.html'"></div>
-
-					<div class="parallax__layer parallax__layer--0">
-						<div class="hdr-para-layer4">
-							<ng-view></ng-view>
+				</div>
+				<div class="parallax__layer parallax__layer--0">
+					<div class="content-container">
+						<ng-view></ng-view>
+						<div class="footer-container">
 							<div ng-include="'/web/features/common/page-footer.html'"></div>
 						</div>
 					</div>
-
 				</div>
 			</div>
-
-
 		</div>
 	</body>
 
