--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -4,6 +4,7 @@ body {
 }
 
 body #page-wrapper {
+    position: relative;
     height: 100%;
     height: 1500px;
 }
@@ -14,45 +15,76 @@ body #page-wrapper {
     -o-transition: all 0.5s;
     transition: all 0.5s;
 }
-/* Parallax base styles
- --------------------------------------------- */
-.parallax {
-    height: 1400px;
-    overflow-x: hidden;
-    overflow-y: auto;
-    perspective: 300px;
-    -webkit-perspective: 300px;
-    -webkit-transform-style: preserve-3d;
-    transform-style: preserve-3d;
-    -webkit-transition: -webkit-transform 0.5s;
-    transition: transform 0.5s;
-}
-.parallax__layer {
+.hdr-container {
     position: absolute;
-    top: 0;
+    ;
+    top:0;
     left: 0;
-    right: 0;
-    bottom: 0;
+    height: 300px;
+    width: 100%;
 }
-
-.parallax__layer--minus-200 {
-    -webkit-transform: translateZ(-200px) scale(2);
-    transform: translateZ(-200px) scale(2);
+.main-container {
+    height: 100%;
+    position:absolute;
+    top:300px;
+    width:100%;
+    display:block;
+    background-image: url('/web/images/img-hdr-para-layer3.png');
+    background-position: center top;
+    background-repeat: no-repeat;
+    z-index:4;
 }
-
-.parallax__layer--minus-150 {
-    -webkit-transform: translateZ(-150px) scale(2);
-    transform: translateZ(-150px) scale(2);
+.main-container .main-page {
+    background-color: white;
 }
-
-.parallax__layer--minus-80 {
-    -webkit-transform: translateZ(-80px) scale(1.2);
-    transform: translateZ(-80px) scale(1.2);
+.footer-container {
+    position: relative;
+    height: 100px;
+    width: 100%;
+    margin-top: 80px;
+    border-top: solid thin #37474F;
+    padding: 10px 10px 10px 10px;
+    text-align: center;
+    height: 100px;
 }
-
-.parallax__layer--0 {
-    -webkit-transform: translateZ(0);
-    transform: translateZ(0);
+.parallax-0 {
+    position:absolute;
+    top:20px;
+    transition-property: all;
+    transition-property: transform;
+    transition-duration: 0.1s;
+    -webkit-animation: ease-in-out;
+    -moz-animation: ease-in-out;
+    -ms-animation: ease-in-out;
+    -o-animation: ease-in-out;
+    animation: ease-in-out;
+    z-index:1;
+}
+.parallax-1 {
+    position:absolute;
+    top:30px;
+    transition-property: all;
+    transition-property: transform;
+    transition-duration: 0.1s;
+    -webkit-animation: ease-in-out;
+    -moz-animation: ease-in-out;
+    -ms-animation: ease-in-out;
+    -o-animation: ease-in-out;
+    animation: ease-in-out;
+    z-index:2;
+}
+.parallax-2 {
+    position:absolute;
+    top:10px;
+    transition-property: all;
+    transition-property: transform;
+    transition-duration: 0.1s;
+    -webkit-animation: ease-in-out;
+    -moz-animation: ease-in-out;
+    -ms-animation: ease-in-out;
+    -o-animation: ease-in-out;
+    animation: ease-in-out;
+    z-index:3;
 }
 
 /* COLOURS */
