--- a/app/views/index.scala.html
+++ b/app/views/index.scala.html
@@ -59,9 +59,11 @@
 	<body>
 		<div id="page-wrapper">
 			<div class="hdr-container">
-				<img src="/web/images/img-hdr-para-layer0.png" class="parallax parallax-0"/>
-				<img src="/web/images/img-hdr-para-layer1.png" class="parallax parallax-1"/>
-				<img src="/web/images/img-hdr-para-layer2.png" class="parallax parallax-2"/>
+				<div class="flex-container">
+					<div class="parallax parallax-0"></div>
+					<div class="parallax parallax-1"></div>
+					<div class="parallax parallax-2"></div>
+				</div>
 			</div>
 			<div class="main-container">
 				<ng-view class="main-page"></ng-view>
