--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -16,12 +16,53 @@ body #page-wrapper {
     transition: all 0.5s;
 }
 .hdr-container {
-    position: absolute;
-    ;
-    top:0;
-    left: 0;
+    position: relative;
+    margin: 0 auto;
     height: 300px;
+    width: 900px;
+    padding: 0;
+}
+.parallax-0 {
+    display: block;
     width: 100%;
+    height: 50px;
+    position:absolute;
+    top:20px;
+    transition-property: all;
+    transition-property: transform;
+    transition-duration: 0.1s;
+    background-image: url("/web/images/img-hdr-para-layer0.png");
+    background-repeat: no-repeat;
+    background-position: center top;
+    z-index:1;
+}
+.parallax-1 {
+    display: block;
+    width: 100%;
+    height: 100px;
+    position:absolute;
+    top:30px;
+    transition-property: all;
+    transition-property: transform;
+    transition-duration: 0.1s;
+    background-image: url("/web/images/img-hdr-para-layer1.png");
+    background-repeat: no-repeat;
+    background-position: center top;
+    z-index:2;
+}
+.parallax-2 {
+    display: block;
+    width: 100%;
+    height: 200px;
+    position:absolute;
+    top:10px;
+    transition-property: all;
+    transition-property: transform;
+    transition-duration: 0.1s;
+    background-image: url("/web/images/img-hdr-para-layer2.png");
+    background-repeat: no-repeat;
+    background-position: center top;
+    z-index:3;
 }
 .main-container {
     height: 100%;
@@ -47,45 +88,7 @@ body #page-wrapper {
     text-align: center;
     height: 100px;
 }
-.parallax-0 {
-    position:absolute;
-    top:20px;
-    transition-property: all;
-    transition-property: transform;
-    transition-duration: 0.1s;
-    -webkit-animation: ease-in-out;
-    -moz-animation: ease-in-out;
-    -ms-animation: ease-in-out;
-    -o-animation: ease-in-out;
-    animation: ease-in-out;
-    z-index:1;
-}
-.parallax-1 {
-    position:absolute;
-    top:30px;
-    transition-property: all;
-    transition-property: transform;
-    transition-duration: 0.1s;
-    -webkit-animation: ease-in-out;
-    -moz-animation: ease-in-out;
-    -ms-animation: ease-in-out;
-    -o-animation: ease-in-out;
-    animation: ease-in-out;
-    z-index:2;
-}
-.parallax-2 {
-    position:absolute;
-    top:10px;
-    transition-property: all;
-    transition-property: transform;
-    transition-duration: 0.1s;
-    -webkit-animation: ease-in-out;
-    -moz-animation: ease-in-out;
-    -ms-animation: ease-in-out;
-    -o-animation: ease-in-out;
-    animation: ease-in-out;
-    z-index:3;
-}
+
 
 /* COLOURS */
 
