--- a/public/features/page-loader/page-loader.css
+++ b/public/features/page-loader/page-loader.css
@@ -8,3 +8,7 @@
     justify-content: center;
     margin: -20px 0px 20px 0px;
 }
+.nav-menu {
+    -webkit-align-self: flex-start;
+    align-self: flex-start;
+}
