--- a/app/views/index.scala.html
+++ b/app/views/index.scala.html
@@ -23,6 +23,7 @@
 		<script type="text/javascript" src='@routes.WebJarAssets.at(webJarAssets.locate("angular-resource.js"))'></script>
 		<script type="text/javascript" src='@routes.WebJarAssets.at(webJarAssets.locate("1.5.8/angular-route.js"))'></script>
 		<script type="text/javascript" src='@routes.WebJarAssets.at(webJarAssets.locate("angular-filter.js"))'></script>
+		<script type="text/javascript" src='@routes.WebJarAssets.at(webJarAssets.locate("1.5.5/angular-cookies.min.js"))'></script>
 		<script type="text/javascript" src='@routes.WebJarAssets.at(webJarAssets.locate("0.2.18/angular-ui-router.js"))'></script>
 		<script type="text/javascript" src='@routes.WebJarAssets.at(webJarAssets.locate("ui-bootstrap-tpls.js"))'></script>
 		<script type="text/javascript" src='@routes.WebJarAssets.at(webJarAssets.locate("angular-material.js"))'></script>
@@ -34,9 +35,10 @@
 		<!-- Home-Page -->
 		<script type="text/javascript" src='@routes.Assets.at("features/home-page/home-page.controller.js")'></script>
 
-		<!-- Header -->
+		<!-- Common -->
 		<script type="text/javascript" src='@routes.Assets.at("features/common/header.directive.js")'></script>
 		<link rel="stylesheet" href='@routes.Assets.at("features/common/header.css")'/>
+		<script type="text/javascript" src='@routes.Assets.at("features/common/flash.service.js")'></script>
 
 		<!-- Side-Menu -->
 		<script type="text/javascript" src='@routes.Assets.at("features/side-menu/side-menu.directive.js")'></script>
@@ -56,6 +58,11 @@
 		<!-- History -->
 		<script type="text/javascript" src='@routes.Assets.at("features/history/history.controller.js")'></script>
 
+		<!-- Login -->
+		<script type="text/javascript" src='@routes.Assets.at("features/login/login.controller.js")'></script>
+		<script type="text/javascript" src='@routes.Assets.at("features/login/register.controller.js")'></script>
+		<script type="text/javascript" src='@routes.Assets.at("features/login/user.service.js")'></script>
+		<script type="text/javascript" src='@routes.Assets.at("features/login/authentication.service.js")'></script>
 
 		<script>
 			var app = angular.module('horsleyParish',[]);
